--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SAWYL - NEW ALBUM OUT NOW</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <section class="main-section">
+    <section class="main-section" id="main-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 col-md-6">
-                   <h1>SAWYL</h1>
+                <div class="col-12 col-lg-6 position-relative first-column">
+                   <h1><a href="#main-section">SAWYL</a></h1>
+                   <div class="overlay"></div>
                 </div><!-- col -->
+                <div class="col-12 col-lg-6">
+                    <nav>
+                        <ul class="d-flex">
+                            <li>Discography</li>
+                            <li>Tour</li>
+                            <li>Shop</li>
+                            <li>Contact</li>
+                        </ul>
+                    </nav>
+                </div>
             </div><!-- row -->
         </div><!-- container -->
     </section><!-- main section -->
