--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         </ul>
                     </nav>
                 </div>
-            </div><!-- row -->
-        </div><!-- container -->
+            </div>
+        </div>
     </section><!-- main section -->
 
 
