[IMPLEMENT] Basic navigation with hover stylings

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
                    <h1><a href="#main-section">SAWYL</a></h1>
                    <div class="overlay"></div>
                 </div><!-- col -->
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 second-column">
                     <nav>
-                        <ul class="d-flex">
-                            <li>Discography</li>
-                            <li>Tour</li>
-                            <li>Shop</li>
-                            <li>Contact</li>
+                        <ul class="d-flex justify-content-between">
+                            <li><a href="#discography-section">Discography</a></li>
+                            <li><a href="#tour-section">Tour</a></li>
+                            <li><a href="#shop-section">Shop</a></li>
+                            <li><a href="#contact-section">Contact</a></li>
                         </ul>
                     </nav>
+                    
                 </div>
             </div>
         </div>
