[IMPLEMENT] featured album article

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                             <li><a href="#contact-section">Contact</a></li>
                         </ul>
                     </nav>
-                    
+                    <article class="featured-album">
+                        <h2>Sawyl</h2>
+                        <p>Silurian - OUT NOW</p>
+                        <div class="featured-album-buttons d-flex justify-content-center">
+                            <button class="featured-album-btn"><a href="#">BUY</a></button>
+                            <button class="featured-album-btn"><a href="#">STREAM</a></button>
+                        </div>
+                    </article>
                 </div>
             </div>
         </div>
