[IMPLEMENT] featured album image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                             <button class="featured-album-btn"><a href="#">STREAM</a></button>
                         </div>
                     </article>
+                    <div class="image-wrapper">
+                        <img src="/assets/imgs/silurians.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
