--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SAWYL - NEW ALBUM OUT NOW</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="https://kit.fontawesome.com/42dcb796dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="main-section" id="main-section">
@@ -15,7 +16,7 @@
                 <div class="col-12 col-lg-6 position-relative first-column">
                    <h1><a href="#main-section">SAWYL</a></h1>
                    <div class="overlay"></div>
-                </div><!-- col -->
+                </div>
                 <div class="col-12 col-lg-6 second-column">
                     <nav>
                         <ul class="d-flex justify-content-between">
@@ -34,12 +35,131 @@
                         </div>
                     </article>
                     <div class="image-wrapper">
-                        <img src="/assets/imgs/silurians.jpg" alt="">
+                        <img src="/assets/imgs/silurians.jpg" alt="silurian album art">
                     </div>
                 </div>
             </div>
         </div>
     </section><!-- main section -->
+
+    <section class="discography-section" id="discography-section">
+        <div class="container-fluid">
+            <div class="row justify-content-around">
+                <div class="col-12">
+                    <h2 class="discography-title">Discography</h2>
+                </div>
+
+                <div class="col-12 col-lg-3 mb-5">
+                    <div class="album-card">
+                        <div class="album-image">
+                            <img src="/assets/imgs/silurians.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-details d-flex flex-column justify-content-center">
+                            <p>The long road home</p>
+                            <span>2011</span>
+                        </div>
+                        <div class="album-buttons d-flex justify-content-around align-items-center">
+                            <a href="#"><i class="fab fa-spotify"></i></a>
+                            <a href="#"><i class="fab fa-bandcamp"></i></a>                
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-3 mb-5">
+                    <div class="album-card">
+                        <div class="album-image">
+                            <img src="/assets/imgs/silurians.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-details d-flex flex-column justify-content-center">
+                            <p>The long road home</p>
+                            <span>2011</span>
+                        </div>
+                        <div class="album-buttons d-flex justify-content-around align-items-center">
+                            <a href="#"><i class="fab fa-spotify"></i></a>
+                            <a href="#"><i class="fab fa-bandcamp"></i></a>                
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-3 mb-5">
+                    <div class="album-card">
+                        <div class="album-image">
+                            <img src="/assets/imgs/silurians.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-details d-flex flex-column justify-content-center">
+                            <p>The long road home</p>
+                            <span>2011</span>
+                        </div>
+                        <div class="album-buttons d-flex justify-content-around align-items-center">
+                            <a href="#"><i class="fab fa-spotify"></i></a>
+                            <a href="#"><i class="fab fa-bandcamp"></i></a>                
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-12 col-lg-3 mb-5">
+                    <div class="album-card">
+                        <div class="album-image">
+                            <img src="/assets/imgs/silurians.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-details d-flex flex-column justify-content-center">
+                            <p>The long road home</p>
+                            <span>2011</span>
+                        </div>
+                        <div class="album-buttons d-flex justify-content-around align-items-center">
+                            <a href="#"><i class="fab fa-spotify"></i></a>
+                            <a href="#"><i class="fab fa-bandcamp"></i></a>                
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-3 mb-5">
+                    <div class="album-card">
+                        <div class="album-image">
+                            <img src="/assets/imgs/silurians.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-details d-flex flex-column justify-content-center">
+                            <p>The long road home</p>
+                            <span>2011</span>
+                        </div>
+                        <div class="album-buttons d-flex justify-content-around align-items-center">
+                            <a href="#"><i class="fab fa-spotify"></i></a>
+                            <a href="#"><i class="fab fa-bandcamp"></i></a>                
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-3 mb-5">
+                    <div class="album-card">
+                        <div class="album-image">
+                            <img src="/assets/imgs/silurians.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-details d-flex flex-column justify-content-center">
+                            <p>The long road home</p>
+                            <span>2011</span>
+                        </div>
+                        <div class="album-buttons d-flex justify-content-around align-items-center">
+                            <a href="#"><i class="fab fa-spotify"></i></a>
+                            <a href="#"><i class="fab fa-bandcamp"></i></a>                
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- discography section -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
