--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="navigation position-absolute w-100">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 px-4">
+                <div class="col-12">
                     <nav class="navbar navbar-expand-lg d-flex justify-content-lg-between">
                         <h1><a class="navbar-brand" href="#">SAWYL</a></h1>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +43,8 @@
             </div>
         </div>
     </section><!-- navigation -->
+
+    
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
