[AMEND] Changed styling to main section and updated readme

--- a/index.html
+++ b/index.html
@@ -44,7 +44,27 @@
         </div>
     </section><!-- navigation -->
 
-    
+    <section class="main-section" id="main-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-lg-6 column-1">
+                    <img class="main-section-bg" src="/assets/imgs/piano.jpg" alt="SAWYL playing piano">
+                    <div class="overlay"></div>
+                </div>
+                <div class="col-12 col-lg-6 column-2">
+                    <div class="featured-album-cover">
+                        <div class="cover"></div>
+                    </div>
+                    <div class="featured-album">
+                        <h2 class="featured-album-artist">Sawyl</h2>
+                        <p class="featured-album-title">Silurian - OUT NOW</p>
+                        <a class="featured-album-btn" href="#">Buy</a>
+                        <a class="featured-album-btn" href="#">Stream</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- main section -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
