--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAWYL - NEW ALBUM OUT NOW</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <script src="https://kit.fontawesome.com/42dcb796dc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <section class="navigation position-absolute w-100">
@@ -48,7 +48,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 column-1">
-                    <img class="main-section-bg" src="/assets/imgs/piano.jpg" alt="SAWYL playing piano">
+                    <img class="main-section-bg" src="assets/imgs/piano.jpg" alt="SAWYL playing piano">
                     <div class="overlay"></div>
                 </div>
                 <div class="col-12 col-lg-6 column-2">
@@ -66,8 +66,38 @@
         </div>
     </section><!-- main section -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <section class="discography-section" id="discography-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="discography-title">Discography</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-4 album-card">
+                    <div class="album-image">
+                        <img src="assets/imgs/silurians.jpg" alt="">
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-text d-flex flex-column justify-content-center">
+                            <p class="album-name">Album Name</p>
+                            <p class="album-year">2021</p>
+                        </div>
+                        <div class="album-icons d-flex align-items-center">
+                            <i class="fab fa-spotify"></i>
+                            <i class="fab fa-bandcamp"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- discography section -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
