--- a/index.html
+++ b/index.html
@@ -10,68 +10,64 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <section class="navigation position-absolute w-100">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="navbar navbar-expand-lg d-flex justify-content-lg-between">
-                        <h1><a class="navbar-brand" href="#">SAWYL</a></h1>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">Discography</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">Tour</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">Shop</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                            </li>
-                        </ul>
-                        </div>
-                    </nav>
-                </div>
+    <section class="navigation container-fluid position-absolute w-100">
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg d-flex justify-content-lg-between">
+                    <h1><a class="navbar-brand" href="#main-section" aria-label="main logo">SAWYL</a></h1>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                        <a class="nav-link" href="#main-section" aria-label="go to home section">Home</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#discography-section" aria-label="go to discography section">Discography</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#tour-section" aria-label="go to tour section">Tour</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#shop-section" aria-label="go to shop section">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#contact-section" aria-label="go to contact section">Contact</a>
+                        </li>
+                    </ul>
+                    </div>
+                </nav>
             </div>
         </div>
     </section><!-- navigation -->
 
-    <section class="main-section" id="main-section">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-lg-6 column-1">
-                    <img class="main-section-bg" src="assets/imgs/piano.jpg" alt="SAWYL playing piano">
-                    <div class="overlay"></div>
+    <section class="container-fluid" id="main-section">
+        <div class="row">
+            <div class="col-12 col-lg-6 column-start">
+                <img class="main-section-bg" src="assets/imgs/piano.jpg" alt="SAWYL playing piano">
+                <div class="overlay"></div>
+            </div>
+            <div class="col-12 col-lg-6 column-end">
+                <div class="featured-album-cover">
+                    <div class="cover">
+                        <img src="assets/imgs/silurians.jpg" alt="silurians album cover">
+                    </div>
                 </div>
-                <div class="col-12 col-lg-6 column-2">
-                    <div class="featured-album-cover">
-                        <div class="cover"></div>
-                    </div>
-                    <div class="featured-album">
-                        <h2 class="featured-album-artist">Sawyl</h2>
-                        <p class="featured-album-title">Silurian - OUT NOW</p>
-                        <a class="featured-album-btn" href="#">Buy</a>
-                        <a class="featured-album-btn" href="#">Stream</a>
-                    </div>
+                <div class="featured-album">
+                    <h2 class="featured-album-artist">Sawyl</h2>
+                    <p class="featured-album-title">Silurian - OUT NOW</p>
+                    <a class="featured-album-btn" href="https://bandcamp.com/" target="_blank" aria-label="buy album">Buy</a>
+                    <a class="featured-album-btn" href="https://www.spotify.com/us/" target="_blank" aria-label="stream album">Stream</a>
                 </div>
             </div>
         </div>
     </section><!-- main section -->
 
-    <section class="discography-section" id="discography-section">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="discography-title">Discography</h2>
-                </div>
+    <section class="container-fluid" id="discography-section">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="discography-title">Discography</h2>
             </div>
         </div>
         <div class="container">
