[AMEND] Added content to discography section

--- a/index.html
+++ b/index.html
@@ -72,18 +72,98 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-lg-4 album-card">
                     <div class="album-image">
-                        <img src="assets/imgs/silurians.jpg" alt="">
+                        <img src="assets/imgs/amsterdam.jpg" alt="Amsterdam album cover">
                     </div>
                     <div class="album-info d-flex justify-content-between">
                         <div class="album-text d-flex flex-column justify-content-center">
-                            <p class="album-name">Album Name</p>
+                            <p class="album-name">Amsterdam</p>
                             <p class="album-year">2021</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <i class="fab fa-spotify"></i>
-                            <i class="fab fa-bandcamp"></i>
+                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-12 col-md-6 col-lg-4 album-card">
+                    <div class="album-image">
+                        <img src="assets/imgs/cosmos.jpg" alt="Cosmos album cover">
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-text d-flex flex-column justify-content-center">
+                            <p class="album-name">Cosmos</p>
+                            <p class="album-year">2019</p>
+                        </div>
+                        <div class="album-icons d-flex align-items-center">
+                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 album-card">
+                    <div class="album-image">
+                        <img src="assets/imgs/wherever-you-may-be.jpg" alt="Wherever You May Be album cover">
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-text d-flex flex-column justify-content-center">
+                            <p class="album-name">Wherever You May Be</p>
+                            <p class="album-year">2018</p>
+                        </div>
+                        <div class="album-icons d-flex align-items-center">
+                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 album-card">
+                    <div class="album-image">
+                        <img src="assets/imgs/late-nights.jpg" alt="Late Nights album cover">
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-text d-flex flex-column justify-content-center">
+                            <p class="album-name">Late Nights</p>
+                            <p class="album-year">2016</p>
+                        </div>
+                        <div class="album-icons d-flex align-items-center">
+                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 album-card">
+                    <div class="album-image">
+                        <img src="assets/imgs/altitutude.jpg" alt="Altitude album cover">
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-text d-flex flex-column justify-content-center">
+                            <p class="album-name">Altitude</p>
+                            <p class="album-year">2015</p>
+                        </div>
+                        <div class="album-icons d-flex align-items-center">
+                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 album-card">
+                    <div class="album-image">
+                        <img src="assets/imgs/the-long-way-home.jpg" alt="The Long Way Home EP album cover">
+                    </div>
+                    <div class="album-info d-flex justify-content-between">
+                        <div class="album-text d-flex flex-column justify-content-center">
+                            <p class="album-name">The Long Way Home EP</p>
+                            <p class="album-year">2015</p>
+                        </div>
+                        <div class="album-icons d-flex align-items-center">
+                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
