[IMPLEMENT] Shop section

--- a/index.html
+++ b/index.html
@@ -244,6 +244,42 @@
         </div>
     </section><!-- tour section -->
 
+    <section class="container-fluid" id="shop-section">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="shop-title">Shop</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 mb-5 shop-image-large">
+                    <img src="assets/imgs/clothing.jpg" alt="Clothing">
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-6 col-md-4 col-lg-6 d-none d-lg-block mb-5 shop-image-small">
+                                <img src="assets/imgs/accessories.jpg" alt="Accessories">
+                            </div>
+                            <div class="col-6 col-md-4 col-lg-6 mb-5 shop-image-small">
+                                <img src="assets/imgs/albums.jpg" alt="Albums">
+                            </div>
+                            <div class="col-6 col-md-4 col-lg-6 mb-5 shop-image-small">
+                                <img src="assets/imgs/tickets.jpg" alt="Tickets">
+                            </div>
+                            <div class="col-6 col-md-4 col-lg-6 d-none d-md-block mb-5 shop-image-small">
+                                <img src="assets/imgs/sheet-music.jpg" alt="Sheet Music">
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <a href="https://www.bigcartel.com" target="_blank" class="shop-button">Shop Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- shop section -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
