--- a/index.html
+++ b/index.html
@@ -280,6 +280,31 @@
         </div>
     </section><!-- shop section -->
 
+    <section class="container-fluid" id="contact-section">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="contact-title">Contact</h2>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 order-2 order-lg-1">
+                        <form action="" class="d-flex flex-column">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" placeholder="Enter your name here">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" placeholder="Enter your email here">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message here"></textarea>
+                        </form>
+                    </div>
+                    <div class="col-12 col-lg-6 contact-image order-1 order-lg-2 mb-5">
+                        <img src="assets/imgs/contact.jpg" alt="Contact Us">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- contact section -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
