[AMEND] Styling changes for responsivity

--- a/index.html
+++ b/index.html
@@ -301,6 +301,11 @@
                     <div class="col-12 col-lg-6 contact-image order-1 order-lg-2 mb-5">
                         <img src="assets/imgs/contact.jpg" alt="Contact Us">
                     </div>
+                    <div class="col-12 d-flex justify-content-center order-3 mt-5 mb-1 social-icons">
+                        <a href="https://www.facebook.com" target="_blank" aria-label="Go to Sawyl's Facebook page"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" aria-label="Go to Sawyl's Instagram page"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.twitter.com" target="_blank" aria-label="Go to Sawyl's Twitter page"><i class="fab fa-twitter"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
