[AMEND] Added more information to the README and made layout changes by chaging Bootstrap classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="navigation container-fluid position-absolute w-100">
         <div class="row">
             <div class="col-12">
-                <nav class="navbar navbar-expand-lg d-flex justify-content-lg-between">
+                <nav class="navbar navbar-expand-xl d-flex justify-content-xl-between">
                     <h1><a class="navbar-brand" href="#main-section" aria-label="main logo">SAWYL</a></h1>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
@@ -44,11 +44,11 @@
 
     <section class="container-fluid" id="main-section">
         <div class="row">
-            <div class="col-12 col-lg-6 column-start">
+            <div class="col-12 col-xl-6 column-start">
                 <img class="main-section-bg" src="assets/imgs/piano.jpg" alt="SAWYL playing piano">
                 <div class="overlay"></div>
             </div>
-            <div class="col-12 col-lg-6 column-end">
+            <div class="col-12 col-xl-6 column-end">
                 <div class="featured-album-cover">
                     <div class="cover">
                         <img src="assets/imgs/silurians.jpg" alt="silurians album cover">
@@ -72,7 +72,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-xl-4 album-card">
                     <div class="album-image">
                         <img src="assets/imgs/amsterdam.jpg" alt="Amsterdam album cover">
                     </div>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 
-                <div class="col-12 col-md-6 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-xl-4 album-card">
                     <div class="album-image">
                         <img src="assets/imgs/cosmos.jpg" alt="Cosmos album cover">
                     </div>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-xl-4 album-card">
                     <div class="album-image">
                         <img src="assets/imgs/wherever-you-may-be.jpg" alt="Wherever You May Be album cover">
                     </div>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-xl-4 album-card">
                     <div class="album-image">
                         <img src="assets/imgs/late-nights.jpg" alt="Late Nights album cover">
                     </div>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-xl-4 album-card">
                     <div class="album-image">
                         <img src="assets/imgs/altitutude.jpg" alt="Altitude album cover">
                     </div>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 album-card">
+                <div class="col-12 col-md-6 col-xl-4 album-card">
                     <div class="album-image">
                         <img src="assets/imgs/the-long-way-home.jpg" alt="The Long Way Home EP album cover">
                     </div>
@@ -179,7 +179,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-xl-6">
                     <div class="tour-card d-flex mb-4">
                         <div class="tour-date text-center">
                             <p class="tour-date-number">15</p>
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 d-none d-lg-block">
+                <div class="col-xl-6 d-none d-xl-block">
                     <div class="tour-image">
                         <img src="assets/imgs/tour.jpg" alt="Sawyl on tour">
                     </div>
@@ -252,22 +252,22 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6 mb-5 shop-image-large">
+                <div class="col-12 col-xl-6 mb-5 shop-image-large">
                     <img src="assets/imgs/clothing.jpg" alt="Clothing">
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-xl-6">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-6 col-md-4 col-lg-6 d-none d-lg-block mb-5 shop-image-small">
+                            <div class="col-6 col-md-4 col-xl-6 d-none d-xl-block mb-5 shop-image-small">
                                 <img src="assets/imgs/accessories.jpg" alt="Accessories">
                             </div>
-                            <div class="col-6 col-md-4 col-lg-6 mb-5 shop-image-small">
+                            <div class="col-6 col-md-4 col-xl-6 mb-5 shop-image-small">
                                 <img src="assets/imgs/albums.jpg" alt="Albums">
                             </div>
-                            <div class="col-6 col-md-4 col-lg-6 mb-5 shop-image-small">
+                            <div class="col-6 col-md-4 col-xl-6 mb-5 shop-image-small">
                                 <img src="assets/imgs/tickets.jpg" alt="Tickets">
                             </div>
-                            <div class="col-6 col-md-4 col-lg-6 d-none d-md-block mb-5 shop-image-small">
+                            <div class="col-6 col-md-4 col-xl-6 d-none d-md-block mb-5 shop-image-small">
                                 <img src="assets/imgs/sheet-music.jpg" alt="Sheet Music">
                             </div>
                             <div class="col-12 d-flex justify-content-center">
@@ -287,7 +287,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-6 order-2 order-lg-1">
+                    <div class="col-12 col-xl-6 order-2 order-xl-1">
                         <form action="" class="d-flex flex-column">
                             <label for="name">Name</label>
                             <input type="text" name="name" id="name" placeholder="Enter your name here">
@@ -298,7 +298,7 @@
                             <input class="align-self-center" type="submit" value="Send">
                         </form>
                     </div>
-                    <div class="col-12 col-lg-6 contact-image order-1 order-lg-2 mb-5">
+                    <div class="col-12 col-xl-6 contact-image order-1 order-xl-2 mb-5">
                         <img src="assets/imgs/contact.jpg" alt="Contact Us">
                     </div>
                     <div class="col-12 d-flex justify-content-center order-3 mt-5 mb-1 social-icons">
