[AMEND] Added rel="noopener" too all links with target attribute of "_blank"

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <div class="featured-album">
                     <h2 class="featured-album-artist">Sawyl</h2>
                     <p class="featured-album-title">Silurian - OUT NOW</p>
-                    <a class="featured-album-btn" href="https://bandcamp.com/" target="_blank" aria-label="buy album">Buy</a>
-                    <a class="featured-album-btn" href="https://www.spotify.com/us/" target="_blank" aria-label="stream album">Stream</a>
+                    <a class="featured-album-btn" href="https://bandcamp.com/" target="_blank" rel="noopener" aria-label="buy album">Buy</a>
+                    <a class="featured-album-btn" href="https://www.spotify.com/us/" target="_blank" rel="noopener" aria-label="stream album">Stream</a>
                 </div>
             </div>
         </div>
@@ -85,8 +85,8 @@
                             <p class="album-year">2021</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -101,8 +101,8 @@
                             <p class="album-year">2019</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
                             <p class="album-year">2018</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -133,8 +133,8 @@
                             <p class="album-year">2016</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                             <p class="album-year">2015</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -165,8 +165,8 @@
                             <p class="album-year">2015</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                                 <img src="assets/imgs/sheet-music.jpg" alt="Sheet Music">
                             </div>
                             <div class="col-12 d-flex justify-content-center">
-                                <a href="https://www.bigcartel.com" target="_blank" class="shop-button">Shop Now</a>
+                                <a href="https://www.bigcartel.com" target="_blank" rel="noopener" class="shop-button">Shop Now</a>
                             </div>
                         </div>
                     </div>
@@ -305,9 +305,9 @@
                         <img src="assets/imgs/contact.jpg" alt="Contact Us">
                     </div>
                     <div class="col-12 d-flex justify-content-center order-3 mt-5 mb-1 social-icons">
-                        <a href="https://www.facebook.com" target="_blank" aria-label="Go to Sawyl's Facebook page"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.instagram.com" target="_blank" aria-label="Go to Sawyl's Instagram page"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.twitter.com" target="_blank" aria-label="Go to Sawyl's Twitter page"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Go to Sawyl's Facebook page"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Go to Sawyl's Instagram page"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Go to Sawyl's Twitter page"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
