[CLEANUP] removed unnecessary classes from css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="container-fluid" id="discography-section">
         <div class="row">
             <div class="col-12">
-                <h2 class="discography-title">Discography</h2>
+                <h2 class="title">Discography</h2>
             </div>
         </div>
         <div class="container">
@@ -177,7 +177,7 @@
     <section class="container-fluid" id="tour-section">
         <div class="row">
             <div class="col-12">
-                <h2 class="tour-title">Tour</h2>
+                <h2 class="title">Tour</h2>
             </div>
         </div>
         <div class="container">
@@ -250,7 +250,7 @@
     <section class="container-fluid" id="shop-section">
         <div class="row">
             <div class="col-12">
-                <h2 class="shop-title">Shop</h2>
+                <h2 class="title">Shop</h2>
             </div>
         </div>
         <div class="container">
@@ -286,7 +286,7 @@
     <section class="container-fluid" id="contact-section">
         <div class="row">
             <div class="col-12">
-                <h2 class="contact-title">Contact</h2>
+                <h2 class="title">Contact</h2>
             </div>
             <div class="container">
                 <div class="row">
