--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link" href="#main-section" aria-label="go to home section">Home</a>
+                        <a class="nav-link" href="#main-section" aria-label="Home">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#discography-section" aria-label="go to discography section">Discography</a>
+                        <a class="nav-link" href="#discography-section" aria-label="Discography">Discography</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#tour-section" aria-label="go to tour section">Tour</a>
+                        <a class="nav-link" href="#tour-section" aria-label="Tour">Tour</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#shop-section" aria-label="go to shop section">Shop</a>
+                        <a class="nav-link" href="#shop-section" aria-label="Shop">Shop</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#contact-section" aria-label="go to contact section">Contact</a>
+                        <a class="nav-link" href="#contact-section" aria-label="Contact">Contact</a>
                         </li>
                     </ul>
                     </div>
@@ -60,8 +60,8 @@
                 <div class="featured-album">
                     <h2 class="featured-album-artist">Sawyl</h2>
                     <p class="featured-album-title">Silurian - OUT NOW</p>
-                    <a class="featured-album-btn" href="https://bandcamp.com/" target="_blank" rel="noopener" aria-label="buy album">Buy</a>
-                    <a class="featured-album-btn" href="https://www.spotify.com/us/" target="_blank" rel="noopener" aria-label="stream album">Stream</a>
+                    <a class="featured-album-btn" href="https://bandcamp.com/" target="_blank" rel="noopener" aria-label="Buy album">Buy</a>
+                    <a class="featured-album-btn" href="https://www.spotify.com/us/" target="_blank" rel="noopener" aria-label="Stream album">Stream</a>
                 </div>
             </div>
         </div>
@@ -85,8 +85,8 @@
                             <p class="album-year">2021</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Amsterdam on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Amsterdam on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -101,8 +101,8 @@
                             <p class="album-year">2019</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Cosmos on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Cosmos on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
                             <p class="album-year">2018</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Wherever You May Be on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Wherever You May Be on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -133,8 +133,8 @@
                             <p class="album-year">2016</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Late Nights on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Late Nights on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                             <p class="album-year">2015</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Altitude on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Altitude on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -165,8 +165,8 @@
                             <p class="album-year">2015</p>
                         </div>
                         <div class="album-icons d-flex align-items-center">
-                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="Album one on Spotify"><i class="fab fa-spotify"></i></a>
-                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="Album one on Bandcamp"><i class="fab fa-bandcamp"></i></a>
+                            <a href="https://www.spotify.com" target="_blank" rel="noopener" aria-label="The Long Way Home on Spotify"><i class="fab fa-spotify"></i></a>
+                            <a href="https://www.bandcamp.com" target="_blank" rel="noopener" aria-label="The Long Way Home on Bandcamp"><i class="fab fa-bandcamp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -305,9 +305,9 @@
                         <img src="assets/imgs/contact.jpg" alt="Contact Us">
                     </div>
                     <div class="col-12 d-flex justify-content-center order-3 mt-5 mb-1 social-icons">
-                        <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Go to Sawyl's Facebook page"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Go to Sawyl's Instagram page"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Go to Sawyl's Twitter page"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
