--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-xl-6 order-2 order-xl-1">
-                        <form action="" class="d-flex flex-column">
+                        <form action="/index.html" method="POST" class="d-flex flex-column">
                             <label for="name">Name</label>
                             <input type="text" name="name" id="name" placeholder="Enter your name here">
                             <label for="email">Email</label>
